@@ -10,9 +10,17 @@ The following deprecated methods and attributes have now been removed:
 - `font.Win32Font` class. This has been replaced by `font.GDIPlusFont`, which was already default.
 - `window.event.WindowExitHandler`. This functionality is now handled by the Window itself.
 
+- `image.ImageData.data` properties. Use the `get_data` and `set_data` methods instead.
+- `image.ImageData.image_data` property. Use the `get_image_data` method instead.
+- `image.ImageData.texture` property. Use the `get_texture` method instead.
+- `image.ImageData.mipmapped_texture` property. Use the `get_mipmapped_texture` method instead.
+- `image.ImageData.texture_sequence` property. Use the `get_texture_sequence` method instead.
+- `image.Texture.delete` method. Textures are automatically released through GC.
+- `image.Texture.image_data` property. Use the `get_image_data` method instead.
+
 note: The canvas and display logic seems a bit disjointed. Should be reviewed.
 note: The `font.Win32Font` class can be removed, and it's methods merged with `font.GDIPlusFont`.
-
+note: The image module properties were deprecated due to parameterization requirements.
 
 
 Pyglet 1.3.0
